--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-allauth==0.44.0
 django-countries==7.0
 django-crispy-forms==1.11.1
 django-smartfields==1.1.3
+gunicorn==20.1.0
 oauthlib==3.1.0
 Pillow==8.1.0
 psycopg2-binary==2.8.6
